--- a/site/components/main/main-cromatografico.css
+++ b/site/components/main/main-cromatografico.css
@@ -139,15 +139,20 @@ header h1.small{
           box-shadow: none;
 }
 
-#main-container #complemento-input{
+#main-container #complemento-input,
+#complemento-input-container span{
   text-align: center;
   opacity: .3;
   font-size: 14px;
   display: inline;
 }
 
-#complemento-input {
+#complemento-input,
+#share-palette-container {
   display: none;
+}
+#share-button:hover{
+  cursor: pointer;
 }
 
 
